# python-api-template

./: .active_backend_app  .ci.env  .dockerignore  .env.drill.mongodb  .env.drill.neo4j  .env.drill.postgres  .env.mongodb  .env.neo4j  .env.neo4j-external.example  .env.neo4j.example  .env.postgres  .env.postgres-external.example  .env.postgres.example  .env.template  .gitattributes  .gitignore  .gitlab-ci.yml.example  .gitmodules  Dockerfile  README.md  WIP.md  alembic.ini  docker-compose-python-dependency-management.yml  docker-compose.neo4j.yml  docker-compose.postgres.yml  docker-compose.yml  fix-neo4j-env.ps1  fix-neo4j-env.sh  main.py  manage-python-project-dependencies.ps1  manage-python-project-dependencies.sh  pyproject.toml  pytest.ini  quick-start.ps1  quick-start.sh  requirements.txt  run-docker-build-diagnostics.ps1  run-docker-build-diagnostics.sh  test-python-version.ps1  test-python-version.sh
alembic/: env.py
api/: export.py  settings.py  test.py
app/: main.py
app/apps/felix/: __init__.py  definition.py  pyproject.toml
app/apps/felix/config/: __init__.py  app_metadata.py
app/apps/felix/deployment/: compose-files.txt  compose.override.yml
app/apps/felix/migrations/: README.md
app/apps/felix/migrations/versions/: felix_001_wellness_tables.py  felix_002_rewards_state.py  felix_003_checkin_metadata.py  felix_004_access_readiness.py  felix_005_activity_catalog_management.py  felix_006_version_width.py  felix_007_web_push_subscriptions.py  felix_008_web_push_dispatch.py  felix_009_activity_title_text.py
app/apps/felix/routes/: __init__.py  account.py  ai_chat.py  sync.py  web_push.py  wellness.py
app/apps/felix/schemas/: __init__.py  account.py  ai_chat.py  web_push_dispatch.py  wellness.py
app/apps/felix/services/: __init__.py  access_readiness_service.py  access_readiness_state.py  account_deletion_service.py  ai_chat_diagnostics.py  ai_chat_service.py  ai_chat_startlist_context.py  rewards_service.py  rewards_state.py  sync_service.py  web_push_dispatch_service.py  web_push_service.py  wellness_service.py
app/apps/mongo_db_test/: __init__.py  definition.py  pyproject.toml
app/apps/mongo_db_test/deployment/: compose-files.txt  compose.override.yml
app/apps/secure_messaging/: .gitignore  README.md  __init__.py  definition.py  local.env.template  pyproject.toml
app/apps/secure_messaging/config/: __init__.py  app_metadata.py  runtime.py
app/apps/secure_messaging/deployment/: compose-files.txt  compose.override.yml
app/apps/secure_messaging/routes/: __init__.py  notifications.py
app/apps/secure_messaging/schemas/: __init__.py  notifications.py
app/apps/secure_messaging/services/: __init__.py  auth.py  email_provider.py  markdown_formatter.py  notification_service.py  providers.py  rate_limiter.py  redaction.py  telegram_provider.py
app/apps/secure_messaging/tests/: test_telegram_provider.py
backups/: README.md
build-image/: README.md  build-image.sh  docker-compose.build.yml
ci-cd/: .ci.env.template  README.md  SECRETS_GUIDE.md  TROUBLESHOOTING.md  docker-compose.cicd-setup.yml
config/: .env.neo4j-external.example  .env.neo4j.example  .env.postgres-external.example  .env.postgres.example  .env.template
deprecated/: README.md
docker/: docker-compose-python-dependency-management.yml  docker-compose.neo4j.yml  docker-compose.postgres.yml  docker-compose.yml
docs/: APP_GLOBAL_BOUNDARY_AUDIT_PLAN.md  APP_SLICE_BOUNDARY_GUIDE.md  ARCHITECTURE.md  AUTOMATIC_MIGRATIONS.md  AWS_COGNITO.md  CRUD_EXAMPLE.md  DATABASE.md  DATABASE_BACKUP.md  DATABASE_CREDENTIALS.md  DATABASE_EXAMPLES.md  DATABASE_LOCK.md  DATABASE_MIGRATIONS.md  DATABASE_MODES.md  DEPENDENCY_MANAGEMENT.md  DOCKER_SETUP.md  HOW_MIGRATIONS_WORK.md  HOW_TO_ADD_ENDPOINT.md  HYBRID_SYNC_API.md  IMPROVEMENT_PLAN_PROGRESS.md  MIGRATION_GUIDE.md  PACKAGES_ENDPOINT.md  PRODUCTION-IMAGE-BUILD.md  PROJECT_STRUCTURE.md  QUICK_CRUD_REFERENCE.md  QUICK_START.md  README-DE.md  RELEASE_CHECKLIST.md  SECURE_MESSAGING.md  STARTUP_PROBES.md  SUPPORT_MATRIX.md  WINDOWS.md
interactive-scripts/: Dockerfile  README.md  docker-compose.setup.yml  setup.sh
local-deployment/: README.md  docker-compose-python-dependency-management.yml  docker-compose.mongodb.named-volume.yml  docker-compose.mongodb.yml  docker-compose.neo4j.yml  docker-compose.postgres.yml  docker-compose.yml  run-phase5-drill.sh  run-release-gate.ps1  run-release-gate.sh  verify-release-safe.ps1  verify-release-safe.sh
logs/: README.md
mounted_data/: sample.txt
python-dependency-management/: Dockerfile  README-DE.md  README.md  config.env.example  dev-setup.sh  docker-compose.yml
qa_pytest/: requirements.txt
setup/: .env.template  README.md  cognito_setup.ps1  cognito_setup.sh  docker-compose.setup.yml  setup.sh
template_v2/: README.md  __init__.py  backend_foundation_contract.json  backend_foundation_contract.py  backend_lifecycle.py  backend_lifecycle_models.py  backend_lifecycle_planning.py  backend_lifecycle_transaction.py  networked_recipe_sources.py  networked_recipes_contract.json  networked_recipes_contract.json.md  networked_recipes_contract.py  records_starter_contract.json  records_starter_contract.json.md  records_starter_contract.py
template_v2/dependency_profiles/postgresql_web_push/: README.md  pyproject.toml
testing/: README-BUILD-SCRIPTS.md  README.md  quick-test.ps1  quick-test.sh  rebuild-and-push.ps1  rebuild-and-push.sh  test-backup-restore.ps1  test-backup-restore.sh  test-crud-example-nodes.ps1  test-crud-example.ps1  test-crud-example.sh  test-migration-fix.sh
tests/: __init__.py  conftest.py  test_backup_capability_factory.py  test_backup_service_facade.py  test_example_repository_factory.py  test_example_service_facade.py  test_felix_account_deletion_route.py  test_felix_account_deletion_service.py  test_migration_smoke.py  test_mongodb_backup_capability.py  test_mongodb_user_service.py  test_provider_capability_factory.py  test_shared_route_boundaries.py  test_sql_handler.py  test_template_v2_ai_chat_recipe_behavior.py  test_template_v2_backend_foundation_contract.py  (+10 more)
(+371 files in other folders)
