[tool.poetry]
name = "fastapi-python-api-template"
version = "0.1.0"
description = "A reusable FastAPI template with Docker and Poetry support"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "api" }, { include = "backend" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
boto3 = "^1.36.4"
neo4j = "^5.22.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
