[tool.poetry]
name = "fastapi-python-api-template"
version = "0.2.0"
description = "A reusable FastAPI template with Docker and Poetry support"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "api" }, { include = "backend" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
boto3 = "^1.36.4"
neo4j = "^5.22.0"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"


[tool.pdm]
distribution = false

[project]
name = "fastapi-redis-api-test"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "pmichiels", email = "pmichiels@engaige.tech"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "boto3>=1.36.4",
    "neo4j>=5.22.0",
    "redis>=5.0.1",
]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = {text = "MIT"}

