[tool.poetry]
name = "fastapi-python-api-template"
version = "0.3.0"
description = "A reusable FastAPI template with Docker and Poetry support"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "api" }, { include = "backend" }]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
python-dotenv = "^1.0.1"
boto3 = "^1.36.4"
neo4j = "^5.22.0"
redis = "^5.0.1"
# SQL Database support
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"


[tool.pdm]
distribution = false

[project]
name = "fastapi-redis-api-test"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "pmichiels", email = "pmichiels@engaige.tech"},
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "boto3>=1.36.4",
    "neo4j>=5.22.0",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.25",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.3",
    "pydantic[email]>=2.12.4",
]
requires-python = ">=3.13,<3.14"
readme = "README.md"
license = {text = "MIT"}

