[project]
name = "secure_messaging"
version = "0.1.0"
description = "Internal-only secure messaging backend app for Swarm notifications."
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic-settings>=2.3.4",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.50",
]
authors = [
    {name = "",email = ""},
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true
